--- a/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -1,1 +1,8 @@
-<p>trending-page works!</p>,
+
+<section class="py-5">
+  <giff-list [gifs]="gifService.trendingGif()">
+
+  </giff-list>
+
+</section>
+
