--- a/src/app/gifs/pages/search-page/search-page.component.html
+++ b/src/app/gifs/pages/search-page/search-page.component.html
@@ -1,1 +1,26 @@
-<p>search-page works!</p>,
+<h2 class="text-2xl fond-bold mt-5">Search Gifs</h2>
+
+<h3 class="text-sm text-gray-500">Search Gifs by name, description or tags</h3>
+
+
+
+<section class="flex flex-col gap-4">
+
+
+    <input type="text"
+    placeholder = "Search Gifs"
+    class="mt3 border border-gray-300 rounded-md p-2"
+    (keyup.enter)="OnSearch(txtSearch.value)"
+    #txtSearch>
+</section>
+
+
+
+
+
+<section class="py-5">
+  <giff-list  list [gifs]="gifs()">
+
+  </giff-list>
+
+</section>
